# ankigen

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml
.github/workflows/: update_space.yml
